Fix z-index of DaysNav

--- a/src/components/DaysNav/DaysNav.scss
+++ b/src/components/DaysNav/DaysNav.scss
@@ -11,6 +11,7 @@
 	position: fixed;
 	top: 61px;
 	width: 100%;
+	z-index: 2;
 	&__day {
 		border-radius: $radius_s;
 		padding: $spacing_xxs 0;
